jakarta reports para test question service agregado